--- a/projects/profile_page_hatada.html
+++ b/projects/profile_page_hatada.html
@@ -6,6 +6,18 @@
     <title>Profile Page</title>
 </head>
 <body>
-    
+    <h1>Aloha! I'm Zeph</h1>
+    <p>My name is Zeph, but you can also call me Kentaro. I have a really big background of where I'm from so sit tight. I'm a Brazilian from Japan who has also lived in the Philippines. My dad is half Japanese, half Brazilian from Brazil, and my mom is Japanese/Filipino from the Philippines. I served a mission in the Philippines Bacolod Mission. Because of that background, I can speak 5 languages namely: English, Japanese, Tagalog, Hiligaynon, and Cebuano.</p>
+    <p>I'm an athletic swimmer, so I go to the pool and train in the gym a lot. I also like going on runs with my friends. I've been playing the piano since I was younger, and I also played the bass guitar in highschool. On my free time, I'd be listening to K-pop or J-pop while playing games on my laptop.</p>
+    <p>My favorite food are:</p>
+    <ol type="A">
+        <li>Udon</li>
+        <li>Strawberries</li>
+        <li><mark>Dark Chocolate</mark></li>
+        <li>Shrimp</li>
+    </ol>
+    <blockquote>"The world is cruel, <em>but I still love you.</em> Even if I sacrifice everything, <strong>I'll still protect you.</strong>"</blockquote>
+    <h2>-Ai Higuchi</h2>
+    <p>&copy; Zeph Kentaro Hatada &rarr; 2026 January</p>
 </body>
 </html>
