--- a/activities/structuraltags.html
+++ b/activities/structuraltags.html
@@ -19,5 +19,9 @@
             <li>What goes in the Footer?<br>The footer tag is seen at the very end of the page, and usually contains copyright information, contact details/links, and other resources related to the webpage.</li>
         </ul>
     </main>
+    <footer>
+        <p>&copy;Hatada, Zeph Kentaro 2026</p>
+        <p>Privacy Notice | Cookie Notice | Jobs</p>
+    </footer>
 </body>
 </html>
