--- a/projects/interests_page_hatada.html
+++ b/projects/interests_page_hatada.html
@@ -24,7 +24,7 @@
         <h3>About Links:</h3>
         <p>An absolute link provides the complete web address including the protocol and domain name. A relative link is only a partial path that directs you to a page relative to your current page.</p>
         <p>Click <a href="https://jpop.fandom.com/wiki/Main_Page">here</a> for an absolute link example, or if you want to know more about JPOP.</p>
-        <p>Click <a href="profile_page_hatada.html">here</a> for a relative link example, or if you want to know more about me.</p>
+        <p>Click <a href="/projects-azzina/projects/profile_page_hatada.html">here</a> for a relative link example, or if you want to know more about me.</p>
     </main>
     <footer>
         <p>&copy;Hatada, Zeph Kentaro 2026</p>
