--- a/activities/firstcss/begincss.html
+++ b/activities/firstcss/begincss.html
@@ -26,7 +26,7 @@
         <p>3. What is a selector used for?<br>A selector is used to select a specific HTML tag or element to change its style using CSS.</p>
     </main>
     <footer>
-        <p>&copy; Zeph Kentaro Hatada 2026</p>
+        <p>&copy; Zeph Kentaro Hatada 2026 January</p>
     </footer>
 </body>
 </html>
