--- a/projects/hero.html
+++ b/projects/hero.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hero</title>
+    <link rel="stylesheet" href="interests.css">
 </head>
 <body>
     <header>
         <nav><a href="interests_page_hatada.html">My Interests</a><span>My Hero</span></nav>
-        <h1>My Hero - YOASOBI</h1>
+        <h1 id="hero">My Hero - YOASOBI</h1>
     </header>
     <main>
         <p>YOASOBI is a J-POP duo that first debuted in 2019. Part of the group is Ayase, who is a songwriter and producer, and Lilas Ikuta, a vocalist. Their songs were first based on fictional stories, but now come from different media, like books, messages, and social media posts. Their songs are mostly fast paced, and have complex musical structures varying in different parts of the song. </p>
@@ -23,7 +24,7 @@
         </dl>
     </main>
     <footer>
-        <p>&copy;Hatada, Zeph Kentaro 2026</p>
+        <p>&copy;<span> Hatada, Zeph Kentaro</span> 2026</p>
     </footer>
 </body>
 </html>
