--- a/projects/interests_page_hatada.html
+++ b/projects/interests_page_hatada.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Interests</title>
+    <link rel="stylesheet" href="interests.css">
 </head>
 <body>
     <header>
@@ -19,11 +20,17 @@
         <p>I love J-Rock songs because they make very complex guitar riffs and bass guitar lines. Although I can't play most of them, they mostly still follow the J-POP chord progression.</p>
         <h2>About Links:</h2>
         <p>An absolute link provides the complete web address including the protocol and domain name. A relative link is only a partial path that directs you to a page relative to your current page.</p>
-        <p>Click <a href="https://jpop.fandom.com/wiki/Main_Page">here</a> for an absolute link example, or if you want to know more about JPOP.</p>
-        <p>Click <a href="/projects-azzina/projects/profile_page_hatada.html">here</a> for a relative link example, or if you want to know more about me.</p>
+        <p class="click">Click <a href="https://jpop.fandom.com/wiki/Main_Page">here</a> for an absolute link example, or if you want to know more about JPOP.</p>
+        <p class="click">Click <a href="/projects-azzina/projects/profile_page_hatada.html">here</a> for a relative link example, or if you want to know more about me.</p>
+        <h2>Questions</h2>
+        <ul>
+            <li class="emphasize">This is the color I used to emphasize text.</li>
+            <li>This is the color I used to de-emphasize text.</li>
+            <li>To choose my colors, I first used hex codes, then used the built-in UI for VSCode to make small changes through the color palette.</li>
+        </ul>
     </main>
     <footer>
-        <p>&copy;Hatada, Zeph Kentaro 2026</p>
+        <p>&copy;<span> Hatada, Zeph Kentaro</span> 2026</p>
     </footer>
 </body>
 </html>
