--- a/projects/phototour/sugarbeach.html
+++ b/projects/phototour/sugarbeach.html
@@ -11,23 +11,17 @@
         <h1>Bacolod Photo Tour</h1>
     </header>
     <nav>
-        <a href="index.html" class="current">Home</a>
+        <a href="index.html">Home</a>
         <a href="ruins.html">The Ruins</a>
         <a href="mambukal.html">Mambukal</a>
         <a href="canlaon.html">Can-laon</a>
-        <a href="sugarbeach.html">Sugar Beach</a>
+        <a href="sugarbeach.html" class="current">Sugar Beach</a>
         <a href="magaso.html">Mag-aso Falls</a>
     </nav>
     <main>
-        <h2>Welcome to the Bacolod Photo Tour</h2>
-        <ul class="decorative">
-            <li>The Ruins</li>
-            <li>Mambukal</li>
-            <li>Can-laon</li>
-            <li>Sugar Beach</li>
-            <li>Mag-aso Falls</li>
-        </ul>
-        <p>This is a tour of different tourists spots found on the island province of Negros Occidental near the City of Bacolod in the Philippines. I served my mission there from December 2022 to 2024</p>
+        <h2>Sugar Beach</h2>
+        <p>This is Sugar Beach. Its named that way because of all the sugarcane plantations around the area.</p>
+        <img src="sugarbeach.jpg" alt="Sugar Beach">
     </main>
     <footer>&copy; Hatada, Zeph Kentaro 2026</footer>
 </body>
