--- a/projects/phototour/mambukal.html
+++ b/projects/phototour/mambukal.html
@@ -11,23 +11,19 @@
         <h1>Bacolod Photo Tour</h1>
     </header>
     <nav>
-        <a href="index.html" class="current">Home</a>
+        <a href="index.html">Home</a>
         <a href="ruins.html">The Ruins</a>
-        <a href="mambukal.html">Mambukal</a>
+        <a href="mambukal.html" class="current">Mambukal</a>
         <a href="canlaon.html">Can-laon</a>
         <a href="sugarbeach.html">Sugar Beach</a>
         <a href="magaso.html">Mag-aso Falls</a>
     </nav>
     <main>
-        <h2>Welcome to the Bacolod Photo Tour</h2>
-        <ul class="decorative">
-            <li>The Ruins</li>
-            <li>Mambukal</li>
-            <li>Can-laon</li>
-            <li>Sugar Beach</li>
-            <li>Mag-aso Falls</li>
-        </ul>
-        <p>This is a tour of different tourists spots found on the island province of Negros Occidental near the City of Bacolod in the Philippines. I served my mission there from December 2022 to 2024</p>
+        <h2>Mambukal</h2>
+        <p>This is Mambukal Falls within Mambukal Resort.</p>
+        <img src="mambukal.jpg" alt="Mambukal Falls">
+        <p>This is the Ishiwata Bath House beside the Mambukal Hot Springs.</p>
+        <img src="mambukalbath.jpg" alt="Mambukal Bathhouse">
     </main>
     <footer>&copy; Hatada, Zeph Kentaro 2026</footer>
 </body>
